--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-modal-video": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
